<resources>
    <string name="app_name">Rashaka</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_news">News</string>
    <string name="bottom_menu_share">ShareApp</string>
    <string name="bottom_menu_recipes">Recipes</string>
    <string name="login_in_partnership_with">In Partnership with:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="close">Close</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="long_useless_text">If you consider Swipeable items in lists, the logic is a bit different for Android and iOS. In Android you don\'t need to confirm deletion with a click.</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="bmi_calculate">CALCULATE</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_text">Dialog text that contains message from API</string>
    <string name="dialog_button_text">OK</string>
    <string name="dialog_button_text_yes">Yes</string>
    <string name="dialog_button_text_no">No</string>
    <string name="dialog_set_steps_goal">To enable progress calculation of Active time and calories please set Steps goal in profile page.</string>
    <string name="walking">Walking</string>
    <string name="walking_value_default">0:00</string>
    <string name="running">Running</string>
    <string name="running_default_value">0:00</string>
    <string name="today">Today</string>
    <string name="activetime_default_value">2:45:04</string>
    <string name="switchOnLocationShort">Please enable location service in your phone</string>
    <string name="ok">Ok</string>
    <string name="permissionPermanentlyDeclined">Location permission was permanently declined</string>
    <string name="permissionExplanation">Please allow Location permission to this application</string>
    <string name="cancel">Cancel</string>
</resources>
