<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@drawable/rounded_corners_white"
              android:layout_gravity="center_horizontal"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingBottom="@dimen/inner_padding"
              android:paddingTop="@dimen/inner_padding">
    <!--android:layout_marginLeft="@dimen/inner_padding_bigger"-->
    <!--android:layout_marginRight="@dimen/inner_padding_bigger"-->

    <TextView
        android:id="@+id/dialog_title"
        style="@style/InfoLightBlackTextBold"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/inner_padding"
        android:layout_marginRight="@dimen/inner_padding"
        android:text="@string/dialog_title"/>

    <TextView
        android:id="@+id/dialog_text"
        style="@style/InfoLightBlackText"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/inner_padding"
        android:layout_marginRight="@dimen/inner_padding"
        android:layout_marginTop="@dimen/inner_padding"
        android:gravity="center_horizontal"
        android:text="@string/dialog_text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/inner_padding_small"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inner_padding_tiny"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/dialog_button_yes"
            style="@style/InfoLightBlackTextBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/inner_padding_micro"
            android:text="@string/dialog_button_text"/>

        <TextView
            android:id="@+id/dialog_button_no"
            style="@style/InfoLightBlackTextBold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/inner_padding_micro"
            android:text="@string/dialog_button_text"/>
    </LinearLayout>



</LinearLayout>