<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/diagram_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background_gray">
        </FrameLayout>

        <LinearLayout
            android:id="@+id/main_progress_parent"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/background_white"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/progress_walking"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/circle_progressbar_size"
                    android:layout_height="@dimen/circle_progressbar_size"
                    android:layout_gravity="center"
                    android:background="@drawable/progress_circular_background"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="70"
                    android:progressDrawable="@drawable/progress_circular_green"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/progress_walking_title"
                        style="@style/InfoLightBlackText"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@drawable/divider_red_line"
                        android:text="@string/walking"/>

                    <TextView
                        android:id="@+id/progress_walking_value"
                        style="@style/InfoLightBlackTextBold"
                        android:layout_gravity="center"
                        android:text="@string/walking_value_default"
                        android:textSize="@dimen/text_size_giant"/>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/progress_running"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/circle_progressbar_size"
                    android:layout_height="@dimen/circle_progressbar_size"
                    android:layout_gravity="center"
                    android:background="@drawable/progress_circular_background"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="20"
                    android:progressDrawable="@drawable/progress_circular_green"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/progress_running_title"
                        style="@style/InfoLightBlackText"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@drawable/divider_red_line"
                        android:text="@string/running"/>

                    <TextView
                        android:id="@+id/progress_running_value"
                        style="@style/InfoLightBlackTextBold"
                        android:layout_gravity="center"
                        android:text="@string/running_default_value"
                        android:textSize="@dimen/text_size_giant"/>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/background_white">

            <ProgressBar
                android:id="@+id/progress_active"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/circle_progressbar_size_big"
                android:layout_height="@dimen/circle_progressbar_size_big"
                android:layout_gravity="center"
                android:background="@drawable/progress_circular_background"
                android:indeterminate="false"
                android:max="100"
                android:progress="70"
                android:progressDrawable="@drawable/progress_circular_green"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/progress_active_today"
                    style="@style/InfoLightBlackTextBold"
                    android:layout_gravity="top|center_horizontal"
                    android:text="@string/today"
                    android:textSize="@dimen/text_size_bigger"/>

                <TextView
                    android:id="@+id/progress_active_value"
                    style="@style/InfoLightBlackTextBold"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/inner_padding_tiny"
                    android:text="@string/activetime_default_value"
                    android:textSize="@dimen/text_size_giant34"/>

                <View
                    android:layout_width="@dimen/inner_padding_giant"
                    android:layout_height="@dimen/inner_padding_text"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/inner_padding"
                    android:background="@color/light_black"/>

                <TextView
                    android:id="@+id/progress_active_title"
                    style="@style/InfoLightBlackText"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="@dimen/inner_padding_tiny"
                    android:text="ACTIVE"/>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/time_graph_layout"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:orientation="horizontal">




        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>